--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
+# dotenv environment variables file
+api/.env
+client/.env
+
 # package-lock.json
 api/package-lock.json
 client/package-lock.json
