--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.10.0",
     "sequelize": "^6.30.0",
