--- a/api/package.json
+++ b/api/package.json
@@ -13,17 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "googleapis": "^114.0.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.10.0",
     "sequelize": "^6.30.0",
     "uuid": "^9.0.0"
