--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
 }
