--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
