--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.30.0",
     "uuid": "^9.0.0"
   },
