--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.282",
     "axios": "^1.3.5",
+    "daisyui": "^2.51.5",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
