--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "spinners-react": "^1.0.7",
     "styled-components": "^5.3.9",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
