--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "spinners-react": "^1.0.7",
